# BEngine

./: .gitignore  BEngine.sln  CMakeLists.txt  README.md  Utils.cmake  build.bat  clean-build.bat
BCore/: BCore.vcxproj  BCore.vcxproj.filters  CMakeLists.txt  CMakeSources.txt  build.bat  clean.bat
BCore/Allocators/: Allocator.h
BCore/Command/: Command.h
BCore/Containers/: ArrayView.h  BitArray.h  CArray.h  ContainerUtils.h  DArray.h  DoubleLinkedList.h  FreeList.h  HMap.h  Heap.h  LinkedList.h  MinHeap.h  Queue.h  SlotArray.h  Stack.h
BCore/Context/: CoreContext.cpp  CoreContext.h
BCore/Defer/: Defer.h
BCore/Defines/: Defines.h
BCore/Serialization/: JSONSerializer.h  XMLSerializer.h
BCore/String/: StringBuffer.cpp  StringBuffer.h  StringBuilder.h  StringUtils.h  StringView.cpp  StringView.h  ToString.h
BCore/Testing/: BTest.h
BCore/Typedefs/: Typedefs.h
BCoreTests/: Assert.h  BTest.h  BlankTests.h  CMakeLists.txt  CMakeSources.txt  ContainerUtilsTests.h  DArrayTests.h  DeferTests.h  FreeListTests.h  HMapTests.h  MinHeapTests.h  QueueTests.h  SlotArrayTests.h  StringTests.h  clean-build.bat  main.cpp
BEngine/: BEngine.vcxproj  BEngine.vcxproj.filters  CMakeLists.txt  CMakeSources.txt
BEngine/Assets/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl  build_shaders.bat
BEngine/Core/: WinMain.cpp
BEngine/Core/Application/: Application.cpp  Application.h
BEngine/Core/ApplicationState/: ApplicationState.cpp  ApplicationState.h
BEngine/Core/AssetManager/: GlobalAssetManager.cpp  GlobalAssetManager.h  MeshAssetManger.h  ShaderAssetManager.h  TextureAssetManager.h
BEngine/Core/AtomicLock/: AtomicLock.h
BEngine/Core/Command/: Command.h
BEngine/Core/Defines/: Defines.cpp  Defines.h
BEngine/Core/EntityManager/: EntityManager.cpp  EntityManager.h
BEngine/Core/EventSystem/: Action.h  GameEventSystem.cpp  GameEventSystem.h
BEngine/Core/EventSystem/Base/: EventBase.cpp  EventBase.h
BEngine/Core/EventSystem/Types/: GameEvents.h
BEngine/Core/FileWatcher/: FileWatcher.cpp  FileWatcher.h
BEngine/Core/Global/: Global.cpp  Global.h
BEngine/Core/JobSystem/: JobSystem.cpp  JobSystem.h
BEngine/Core/Logger/: Logger.cpp  Logger.h
BEngine/Core/Logger/Base/: ILogger.cpp  ILogger.h
BEngine/Core/Logger/Types/: ConsoleLogger.cpp  ConsoleLogger.h
BEngine/Core/Maths/: Maths.h  Matrix4x4.h  Quaternion.h  Rect.h  Vector2Int.h  Vector3.h  Vector4.h
BEngine/Core/Platform/Base/: Filesystem.h  Input.h  InputUtils.cpp  InputUtils.h  Memory.h  Platform.h  Time.h  Window.h
BEngine/Core/Platform/Base/Filesystem/: Filesystem.h
BEngine/Core/Platform/Base/Input/: Input.cpp  Input.h  InputUtils.cpp  InputUtils.h  KeyCode.h
BEngine/Core/Platform/Base/Memory/: Memory.cpp  Memory.h
BEngine/Core/Platform/Base/Platform/: Platform.cpp  Platform.h
BEngine/Core/Platform/Base/Window/: Window.h
BEngine/Core/Platform/Types/Win32/: Win32Filesystem.h  Win32Memory.h  Win32Platform.h  Win32Time.h  Win32Utils.cpp  Win32Utils.h  Win32Window.h
BEngine/Core/Platform/Types/Win32/Filesystem/: Win32Filesystem.cpp  Win32Filesystem.h
BEngine/Core/Platform/Types/Win32/Input/: Win32Input.cpp  Win32Input.h
BEngine/Core/Platform/Types/Win32/Memory/: Win32Memory.cpp  Win32Memory.h
BEngine/Core/Platform/Types/Win32/Platform/: Win32Platform.cpp  Win32Platform.h
BEngine/Core/Platform/Types/Win32/Window/: Win32Utils.cpp  Win32Utils.h  Win32Window.cpp  Win32Window.h
BEngine/Core/Renderer/Backend/: BackendRenderer.cpp  BackendRenderer.h
BEngine/Core/Renderer/Backend/Vulkan/Context/: CommandBuffer.cpp  Fence.cpp  Fence.h  (+12 more)
BEngine/Core/Renderer/Buffer/: Buffer.cpp  Buffer.h
BEngine/Core/Renderer/CommandBuffer/: CommandBuffer.cpp  CommandBuffer.h  CommandPoolsInfo.h
BEngine/Core/Renderer/Context/: LogicalDeviceInfo.h  PhysicalDeviceInfo.cpp  PhysicalDeviceInfo.h  QueuesInfo.h  RendererContext.h  SwapchainInfo.cpp  SwapchainInfo.h  SwapchainSupportInfo.h  VulkanContext.h
BEngine/Core/Renderer/DescriptorManager/: DescriptorManager.cpp  DescriptorManager.h
BEngine/Core/Renderer/Fence/: Fence.cpp  Fence.h
BEngine/Core/Renderer/Font/: Font.h
BEngine/Core/Renderer/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.h
BEngine/Core/Renderer/Frontend/: FrontendRenderer.cpp  FrontendRenderer.h
BEngine/Core/Renderer/Frontend/Buffer/: Buffer.cpp  Buffer.h
BEngine/Core/Renderer/Frontend/Pipeline/: Pipeline.cpp  Pipeline.h
BEngine/Core/Renderer/Frontend/Shader/: Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  ShaderUtils.cpp  ShaderUtils.h
BEngine/Core/Renderer/Frontend/Texture/: Texture.cpp  Texture.h  TextureDescription.cpp  TextureDescription.h
BEngine/Core/Renderer/Mesh/: Mesh3D.cpp  Mesh3D.h  Vertex3D.h
BEngine/Core/Renderer/Pipeline/: Pipeline.cpp  Pipeline.h
BEngine/Core/Renderer/RenderGraph/: BasicRenderGraph.h  RenderGraph.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h
BEngine/Core/Renderer/Renderpass/: BasicRenderpass.h  Renderpass.h
BEngine/Core/Renderer/Renderpasses/: BasicRenderpass.h  UIRenderpass.h
BEngine/Core/Renderer/Shader/: Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  ShaderUtils.cpp  ShaderUtils.h
BEngine/Core/Renderer/Subpasses/: BasicSubpass.h  Subpass.h  UISubpass.h
BEngine/Core/Renderer/Texture/: Texture.cpp  Texture.h
BEngine/Core/Renderer/VulkanBackend/: VulkanBackendRenderer.cpp  VulkanBackendRenderer.h
BEngine/Core/Resources/: Compile.bat  FontShader.frag  FontShader.frag.spv  FontShader.vert  FontShader.vert.spv  SimpleShader.frag  SimpleShader.frag.spv  SimpleShader.vert  SimpleShader.vert.spv  UIShader.frag  UIShader.frag.spv  UIShader.vert  UIShader.vert.spv
BEngine/Core/Thread/: Thread.h
BEngine/Core/Time/: Time.cpp  Time.h
BEngine/Core/UI/: FlowLayout.h  UILayout.h
BEngine/Core/Utils/: FileUtils.cpp  FileUtils.h  Fomatter.h  MemoryUtils.h  stb_image_writer.cpp  stb_image_writer.h
BEngine/VTune Profiler Results/BEngine/: BEngine.vtuneproj
CustomGame/: CMakeLists.txt  CMakeSources.txt  CustomGame.cpp  CustomGameState.h  EntryPoint.h  GameText.h  GameUI.h  TextUI.cpp  TextUI.h
(+56 files in other folders)
